@@ -2,7 +2,7 @@
 //
 // ImageLib Sources
 // Copyright (C) 2000-2008 by Denton Woods
-// Last modified: 08/17/2008
+// Last modified: 02/14/2009
 //
 // Filename: src-IL/src/il_gif.c
 //
@@ -716,25 +716,6 @@ ILboolean RemoveInterlace(ILimage *image)
 
 	ifree(image->Data);
 	image->Data = NewData;
-
-	return IL_TRUE;
-}
-
-
-// Assumes that Dest has nothing in it.
-ILboolean iCopyPalette(ILpal *Dest, ILpal *Src)
-{
-	if (Src->Palette == NULL || Src->PalSize == 0)
-		return IL_FALSE;
-
-	Dest->Palette = (ILubyte*)ialloc(Src->PalSize);
-	if (Dest->Palette == NULL)
-		return IL_FALSE;
-
-	memcpy(Dest->Palette, Src->Palette, Src->PalSize);
-
-	Dest->PalSize = Src->PalSize;
-	Dest->PalType = Src->PalType;
 
 	return IL_TRUE;
 }
